--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -1,9 +1,10 @@
 application_id = 'io.github.vdoesui.Isomorphicon'
 
-scalable_dir = 'hicolor' / 'scalable' / 'apps'
+size = '512x512'
+icon_dir = 'hicolor' / size / 'apps'
 install_data(
-  scalable_dir / ('@0@.svg').format(application_id),
-  install_dir: get_option('datadir') / 'icons' / scalable_dir
+  icon_dir / ('@0@.png').format(application_id),
+  install_dir: get_option('datadir') / 'icons' / icon_dir
 )
 
 symbolic_dir = 'hicolor' / 'symbolic' / 'apps'
